--- a/.github/workflows/fetch_weather.yml
+++ b/.github/workflows/fetch_weather.yml
@@ -3,7 +3,7 @@ name: Fetch weather and Commit
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '0 */2'
+    - cron:  '0 */2 * * *'
 
 jobs:
   scheduled:
