--- a/.github/workflows/fetch_weather.yml
+++ b/.github/workflows/fetch_weather.yml
@@ -15,7 +15,7 @@ jobs:
       env:
         OPENWEATHERMAP_KEY: ${{ secrets.OPENWEATHERMAP_KEY }}
       run: |-
-        curl "https://api.openweathermap.org/data/2.5/onecall?lat=-33.87&lon=18.66&appid=$OPENWEATHERMAP_KEY&units=metric" >> .\data\forecast.json
+        curl "https://api.openweathermap.org/data/2.5/onecall?lat=-33.87&lon=18.66&appid=$OPENWEATHERMAP_KEY&units=metric" >> ./data/forecast.json
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
