--- a/.github/workflows/fetch_weather.yml
+++ b/.github/workflows/fetch_weather.yml
@@ -21,6 +21,6 @@ jobs:
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
         git add -A
-        timestamp=$(date -u)
+        timestamp=$(date -u +%F" "%T" UTC")
         git commit -m "Latest weather forecast: ${timestamp}" || exit 0
         git push
