--- a/.github/workflows/tweet_joke.yml
+++ b/.github/workflows/tweet_joke.yml
@@ -19,9 +19,26 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Cache node modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}- 
+     
     - name: Use Node.js 12.x
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
+    
     - run: npm install
-    - run: node ./tweet/tweetjoke.js
+    
+    - name: Run the Tweet Joke script
+      run: node ./tweet/tweetjoke.js
